# chatgptcodexclone2

./: README.md  codex_portable.py  pyproject.toml  run_tests.bat  run_tests.py  run_tests.sh
codex_clone/: __init__.py  api.py  backend_helper.py  config.py  logging_utils.py  repl.py  socket_backend.py
tests/: test_api_mocked.py  test_config.py  test_logging_utils.py  test_socket_client_basic.py
