[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-portable-desktop-pyqt-autoinstall"
version = "1.0.1"
description = "Codex-style assistant with PyQt6 UI and auto-start Tk/curses PyQt installer"
authors = [{ name = "Local User" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["codex_clone"]
