[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-portable-socket-clean"
version = "1.3.0"
description = "Codex-style assistant with modern PyQt6 UI, socket daemon, clean shutdown, and logging"
authors = [{ name = "Local User" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["codex_clone"]
